--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "paradise-nursery",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Alex-kagunda.github.io/plant-nursery",
-  "dependencies": {
+"homepage": "https://Alex-kagunda.github.io/plant-nursery",  "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
